# shinylivedep

./: README.md  pyproject.toml
myapp/: app.py  stats.py
